--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ site-twitter: joxw1 #if your site has a twitter account, enter it here
 # Author Settings
 author: Joshua Wiegmann # add your name
 author-img: joshua-wiegmann.png # add your photo
-about-author: Hi! Ich bin Joshua, Softwareentwickler aus Hannover und ich versuche ein Code Ninja zu werden 🐱‍👤 # add description
+about-author: Hi! Ich bin Joshua, Softwareentwickler aus Hannover und ich versuche ein Code Ninja zu werden 🏃‍♂️ # add description
 social-twitter: joxw1 # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: joxw1 # add your Github handle
