--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ social-email: joshua.wiegmann@pm.me # add your Email address
 discus-identifier: # add your discus identifier
 
 # Tracker
-analytics: # Google Analytics
+analytics: UA-176843375-1 # Google Analytics
 
 # Build Settings
 markdown: kramdown
