Deleted twitter and changed description text

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ site-twitter: joxw1
 # Author Settings
 author: Joshua Wiegmann # add your name
 author-img: joshua-wiegmann.png # add your photo
-about-author: Hi! Ich bin Joshua, Softwareentwickler aus Hannover und ich versuche ein Code Ninja zu werden 🏃‍♂
-social-twitter: joxw1 # add your Twitter handle
+about-author: Hi! Ich bin Joshua. Ich bin Softwareentwickler aus Hannover und du bist hier auf meinem kleinen Blog. ❤️
+social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: joxw1 # add your Github handle
 social-linkedin: # add your Linkedin handle
