Added post about react lifecycle methods

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ about-author: Hi! Ich bin Joshua. Ich bin Softwareentwickler aus Hannover und du
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: joxw1 # add your Github handle
-social-linkedin: # add your Linkedin handle
+social-linkedin: joshuawiegmann # add your Linkedin handle
 social-email: joshua.wiegmann@pm.me # add your Email address
 
 # Disqus
